test/v3/fail/match04.v3
//@seman = NotComputable @ 7:15

class switch04 {
    
    method testm(a: int) -> int {
        match ( a ) {
            testm(0): ;
        }
        return 0;
    }
}
